--- a/index.html
+++ b/index.html
@@ -5,15 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;400&family=Hanken+Grotesk:wght@700&family=IBM+Plex+Sans:wght@700&family=Josefin+Sans:wght@300&family=League+Spartan:wght@700&family=Lexend+Deca:wght@700&family=Outfit:wght@700&family=Overpass:wght@700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <script src="app.js"></script>
   <title>Frontend Mentor | Pod request access landing page</title>
 </head>
 <body>
-  Publish your podcasts everywhere.
 
-  Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
-  Apple Podcasts, Google Podcasts, Pocket Casts and more!
+<header>
+  <img src="./assets/desktop/logo.svg" alt="Podcast" class="logo">
+</header>
+<main>
 
-  Request access
+  <h1>Publish your podcasts everywhere.</h1>
+
+ <p>Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
+  Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
+
+  <form>
+    <input type="email" placeholder="Email Address">
+    <span class="error">Oops! Please check your email</span>
+
+  <button type="submit">Request access</button>
+  </form>
+
+<div class="brands">
+  <img src="./assets/desktop/spotify.svg" alt="Spotify Podcast">
+  <img src="./assets/desktop/apple-podcast.svg" alt="Apple Podcast">
+  <img src="./assets/desktop/google-podcast.svg" alt="Google Podcast">
+  <img src="./assets/desktop/pocket-casts.svg" alt="Pocket Cast">
+</div>
+
+
+</main>
+
+
+<footer>
+  <img src="./assets/desktop/bg-pattern.svg" alt="Dots" class="dots">
+</footer>
+
 </body>
 </html>
