--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   </form>
 
 <div class="brands">
-  <img src="assets/desktop/spotify.svg" alt="Spotify Podcast">
-  <img src="assets/desktop/apple-podcast.svg" alt="Apple Podcast">
-  <img src="assets/desktop/google-podcast.svg" alt="Google Podcast">
-  <img src="assets/desktop/pocket-casts.svg" alt="Pocket Cast">
+  <img src="./assets/desktop/spotify.svg" alt="Spotify Podcast">
+  <img src="./assets/desktop/apple-podcast.svg" alt="Apple Podcast">
+  <img src="./assets/desktop/google-podcast.svg" alt="Google Podcast">
+  <img src="./assets/desktop/pocket-casts.svg" alt="Pocket Cast">
 </div>
 
 
@@ -43,7 +43,7 @@
 
 
 <footer>
-  <img src="assets/desktop/bg-pattern.svg" alt="Dots" class="dots">
+  <img src="./assets/desktop/bg-pattern.svg" alt="Dots" class="dots">
 </footer>
 
 </body>
