--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-  <img src="assets/desktop/logo.svg" alt="Podcast" class="logo">
+  <img src="pod-request-access-landing-page/starter-code/assets/desktop/logo.svg" alt="Podcast" class="logo">
 </header>
 <main>
 
@@ -32,10 +32,10 @@
   </form>
 
 <div class="brands">
-  <img src="./assets/desktop/spotify.svg" alt="Spotify Podcast">
-  <img src="./assets/desktop/apple-podcast.svg" alt="Apple Podcast">
-  <img src="./assets/desktop/google-podcast.svg" alt="Google Podcast">
-  <img src="./assets/desktop/pocket-casts.svg" alt="Pocket Cast">
+  <img src="pod-request-access-landing-page/starter-code/assets/desktop/spotify.svg" alt="Spotify Podcast">
+  <img src="pod-request-access-landing-page/starter-code/assets/desktop/apple-podcast.svg" alt="Apple Podcast">
+  <img src="pod-request-access-landing-page/starter-code/assets/desktop/google-podcasts.svg" alt="Google Podcasts">
+  <img src="pod-request-access-landing-page/starter-code/assets/desktop/pocket-casts.svg" alt="Pocket Casts">
 </div>
 
 
@@ -43,7 +43,7 @@
 
 
 <footer>
-  <img src="./assets/desktop/bg-pattern.svg" alt="Dots" class="dots">
+  <img src="pod-request-access-landing-page/starter-code/assets/desktop/bg-pattern-dots.svg" alt="Dots" class="dots">
 </footer>
 
 </body>
