--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </header>
 <main>
 
+  <div class="container">
+
   <h1>Publish your podcasts everywhere.</h1>
 
  <p>Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
@@ -38,6 +40,7 @@
   <img src="pod-request-access-landing-page/starter-code/assets/desktop/pocket-casts.svg" alt="Pocket Casts">
 </div>
 
+</div>
 
 </main>
 
