--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="container">
 
-  <h1>Publish your podcasts everywhere.</h1>
+  <h1>Publish your podcasts <span class="white-title">everywhere.</span></h1>
 
  <p>Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
   Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
