Update HTML & JS

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
 
   <form>
-    <input type="email" placeholder="Email Address">
-    <span class="error">Oops! Please check your email</span>
+    <input type="email" id="email" placeholder="Email Address">
+    <span id="error">Oops! Please check your email</span>
 
   <button type="submit">Request access</button>
   </form>
