Update HTML & JS

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <button type="submit">Request access</button>
   </form>
 
+  <p id="success-message"></p>
+
 <div class="brands">
   <img src="pod-request-access-landing-page/starter-code/assets/desktop/spotify.svg" alt="Spotify Podcast">
   <img src="pod-request-access-landing-page/starter-code/assets/desktop/apple-podcast.svg" alt="Apple Podcast">
