--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <form>
     <input type="email" id="email" placeholder="Email Address">
-     <span id="error-message"></span><br>
+     <span id="email-error"></span><br>
     <button type="submit">Request access</button>
   </form>
 
