--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
   <form onsubmit="return validateEmail()">
      <input type="email" id="email" placeholder="Email Address">
-     <span id="email-error"></span><br>
+     <span id="email-error" style="color: red;"></span><br>
      <button type="submit">Request access</button>
   </form>
 
-  <p id="success-message"></p>
+  <p id="success-message" style="color: green;"></p>
 
 <div class="brands">
   <img src="pod-request-access-landing-page/starter-code/assets/desktop/spotify.svg" alt="Spotify Podcast">
